# tinydag

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: num.py  sequence.py
tests/: test_tinydag.py
tinydag/: __init__.py  exceptions.py  node.py  tinydag.py
